PlaylistMenu layout issues have been fixed

--- a/Web.Upnp.Control/ClientApp/src/styles/_layout-grid.scss
+++ b/Web.Upnp.Control/ClientApp/src/styles/_layout-grid.scss
@@ -54,6 +54,7 @@
     grid: 1fr / auto-flow 100%;
     height: 100%;
     overflow-x: auto;
+    overflow-y: hidden;
     overscroll-behavior-x: contain;
     scroll-snap-type: x mandatory;
     scroll-snap-stop: always;
